[build-system]
requires = ["setuptools>=42", "wheel", "tomli>=1.2.0; python_version<'3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "inji"
version = "0.6.0"
description = "Render parametrized Jinja2 templates at the CLI"
authors = [
    { name = "Shalom Bhooshi", email = "s.bhooshi@gmail.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
    "markdown>=3.7.0",
    "more-itertools>=8.0.0",
    "python-tr",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "MarkupSafe>=2.1.5"
]
keywords = ["jinja", "jinja2", "templating"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration"
]

[project.urls]
Homepage = "https://github.com/shalomb/inji"
Repository = "https://github.com/shalomb/inji"
Issues = "https://github.com/shalomb/inji/issues"

[project.scripts]
inji = "inji.cli:main"

[project.optional-dependencies]
test = [
    "ansible>=2.8",
    "cffi>=1.14.2",
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-tap"
]
build = [
    "twine",
    "build"
]

[tool.setuptools]
packages = ["inji"]
include-package-data = true
zip-safe = false
