[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inji"
version = "0.6.0"
description = "Render parametrized Jinja2 templates at the CLI"
authors = [
    { name = "Shalom Bhooshi", email = "s.bhooshi@gmail.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
    "markdown>=3.7.0",
    "more-itertools>=8.0.0",
    "python-tr",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "MarkupSafe>=2.1.5"
]
keywords = ["jinja", "jinja2", "templating"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration"
]

[project.urls]
Homepage = "https://github.com/shalomb/inji"
Repository = "https://github.com/shalomb/inji"
Issues = "https://github.com/shalomb/inji/issues"

[project.scripts]
inji = "inji.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]
test = [
    "ansible>=2.8",
    "cffi>=1.14.2",
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-tap"
]
build = [
    "twine",
    "build"
]
security = [
    "pip-audit>=2.6.0",
    "safety>=3.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["inji"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-ra -q -rxXs --color=auto --tb=short -W ignore::DeprecationWarning --showlocals"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
omit = [
    "*/site-packages/*",
    "*/distutils/*",
    "tests/*",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
show_missing = true

# ---------------------------------------------------------------------------
# ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade
select = ["E", "W", "F", "I", "UP"]
ignore = [
    # Lambda bodies are intentionally terse; full function defs would bloat
    # the filters/globals dicts significantly.
    "E731",  # Do not assign a lambda expression, use a def
]

[tool.ruff.lint.per-file-ignores]
# Test files: allow assert statements and relative imports
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
